kiên/add create style, genre and edit

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "start:gateway": "nest start gateway --watch",
     "start:user": "nest start user --watch",
     "start:noti": "nest start notification --watch",
-    "start:all-cmd": "start cmd /k \"npm run start:gateway\" & start cmd /k \"npm run start:auth\" & start cmd /k \"npm run start:user\" & start cmd /k \"npm run start:noti\"",
-    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:auth\" \"npm run start:users\" \"npm run start:noti\"",
+    "start:genre": "nest start genre --watch",
+    "start:style": "nest start style --watch",
+    "start:all-cmd": "start cmd /k \"npm run start:gateway\" & start cmd /k \"npm run start:auth\" & start cmd /k \"npm run start:user\" & start cmd /k \"npm run start:genre\" & start cmd /k \"npm run start:style\"",
+    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:auth\" \"npm run start:users\" \"npm run start:genre\" \"npm run start:style\"",
     "_comment1": "=====ĐÂY LÀ CÁI KẾT THÚC SETUP CHO RUN SERVICE======",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
