--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "start:noti": "nest start notification --watch",
     "start:genre": "nest start genre --watch",
     "start:style": "nest start style --watch",
-    "start:all-cmd": "start cmd /k \"npm run start:gateway\" & start cmd /k \"npm run start:auth\" & start cmd /k \"npm run start:user\" & start cmd /k \"npm run start:genre\" & start cmd /k \"npm run start:style\"",
-    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:auth\" \"npm run start:users\" \"npm run start:genre\" \"npm run start:style\"",
+    "start:story": "nest start story --watch",
+    "start:all-cmd": "start cmd /k \"npm run start:gateway\" & start cmd /k \"npm run start:auth\" & start cmd /k \"npm run start:user\" & start cmd /k \"npm run start:genre\" & start cmd /k \"npm run start:style\" & start cmd /k \"npm run start:story\"",
+    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:auth\" \"npm run start:users\" \"npm run start:genre\" \"npm run start:style\" \"npm run start:story\"",
     "_comment1": "=====ĐÂY LÀ CÁI KẾT THÚC SETUP CHO RUN SERVICE======",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -49,6 +50,7 @@
     "google-auth-library": "^10.5.0",
     "handlebars": "^4.7.8",
     "mongoose": "^8.20.1",
+    "multer": "^2.0.2",
     "nats": "^2.29.3",
     "nodemailer": "^7.0.10",
     "reflect-metadata": "^0.2.2",
@@ -64,6 +66,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
